--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,6 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>21</maven.compiler.release>
-        <exec.mainClass>jar.gymhub.GymHub</exec.mainClass>
+        <exec.mainClass>jar.gymhub.Main</exec.mainClass>
     </properties>
 </project>
